# catimg

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  catimg  catimg.spec  colors.sh  colors.txt
.github/workflows/: cppcheck.yml
completion/: _catimg
man/: catimg.1
src/: catimg.c  khash.h  magic.c  sh_color.c  sh_color.h  sh_image.c  sh_image.h  sh_utils.c  sh_utils.h  stb_image.c  stb_image.h
tests/: test_catimg.c
